fix overflow on very long urls (#14)

--- a/static/css/form_styles.css
+++ b/static/css/form_styles.css
@@ -70,6 +70,7 @@ button:hover {
   margin-bottom: 15px;
   padding-bottom: 10px;
   border-bottom: 1px solid #ddd;
+  overflow-wrap: break-word;
 }
 .result-item:last-child {
   border-bottom: none;
